extract pure include dir, add static sdl linkage

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -1,18 +1,15 @@
 project(example CXX)
 
+include_directories(${PROJECT_INCLUDES_DIR})
+
 if (EMSCRIPTEN)
     add_definitions(-DEMSCRIPTEN)
+    add_definitions(-DUSE_WASM)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --bind --memory-init-file 0 -s TOTAL_MEMORY=64*1024*1024 -s SAFE_HEAP=1")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s USE_WEBGL2=1 -s USE_SDL=2")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s WASM=1 -s GL_DEBUG=1 -s GL_ASSERTIONS=1 -s TRACE_WEBGL_CALLS=0")
     set(CMAKE_EXECUTABLE_SUFFIX ".html")
-    add_definitions(-DUSE_WASM)
-    add_executable(example main.cpp)
-else ()
-    find_package(SDL2 REQUIRED)
-    string(STRIP ${SDL2_LIBRARIES} SDL2_LIBRARIES)
+endif()
 
-    include_directories(${SDL2_INCLUDE_DIR})
-    add_executable(example main.cpp)
-    target_link_libraries(example ${SDL2_LIBRARIES})
-endif ()
+add_executable(example main.cpp)
+target_link_libraries(example whycpp)
