--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.6)
-project(whycpp)
+project(whycpp CXX)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -Wextra -Wzero-as-null-pointer-constant -Winit-self -Wswitch-default -Wfloat-equal -Wdangling-else -Wno-unused-parameter")
@@ -7,15 +7,15 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -Wextra -Wzero-as-null-poi
 set(CMAKE_DIR "${PROJECT_SOURCE_DIR}/CMake")
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_DIR})
 
-set(PROJECT_HEADERS_DIR ${PROJECT_SOURCE_DIR}/include)
+set(PROJECT_INCLUDES_DIR ${PROJECT_SOURCE_DIR}/include)
+set(PROJECT_HEADERS_DIR ${PROJECT_SOURCE_DIR}/src)
 set(PROJECT_SOURCES_DIR ${PROJECT_SOURCE_DIR}/src)
 set(TEST_SOURCES_DIR ${PROJECT_SOURCE_DIR}/tests)
 
+file(GLOB_RECURSE INCLUDES ${PROJECT_INCLUDES_DIR}/*.h)
 file(GLOB_RECURSE HEADERS ${PROJECT_HEADERS_DIR}/*.h)
 file(GLOB_RECURSE SOURCES ${PROJECT_SOURCES_DIR}/*.cpp)
 file(GLOB_RECURSE TEST_SOURCES ${TEST_SOURCES_DIR}/*.cpp)
-
-include_directories(${PROJECT_HEADERS_DIR})
 
 add_subdirectory(src)
 add_subdirectory(example)
