add installation setings in cmake

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,7 +2,7 @@ project(whycpp CXX)
 
 include_directories(${PROJECT_INCLUDES_DIR})
 
-add_library(whycpp SHARED STATIC ${SOURCES} ${HEADERS} ${INCLUDES})
+add_library(whycpp SHARED ${SOURCES} ${HEADERS} ${INCLUDES})
 
 if (EMSCRIPTEN)
     add_definitions(-DEMSCRIPTEN)
@@ -12,3 +12,11 @@ else ()
     string(STRIP ${SDL2_LIBRARIES} SDL2_LIBRARIES)
     target_link_libraries(whycpp ${SDL2_LIBRARIES})
 endif ()
+
+set(OUTPUT_DIR ${CMAKE_BINARY_DIR}/why_cpp)
+set(OUTPUT_LIB_DIR ${OUTPUT_DIR}/${CMAKE_SYSTEM_NAME}${BITNESS})
+set_target_properties(whycpp PROPERTIES PUBLIC_HEADER "${INCLUDES}")
+
+install(TARGETS whycpp
+        LIBRARY DESTINATION ${OUTPUT_LIB_DIR}
+        PUBLIC_HEADER DESTINATION ${OUTPUT_DIR}/include)
