add ability to download sdl2 and compile it in static mode

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,12 @@ file(GLOB_RECURSE HEADERS ${PROJECT_HEADERS_DIR}/*.h)
 file(GLOB_RECURSE SOURCES ${PROJECT_SOURCES_DIR}/*.cpp)
 file(GLOB_RECURSE TEST_SOURCES ${TEST_SOURCES_DIR}/*.cpp)
 
+set(SDL2_FROM_SOURCE OFF)
+
+if (SDL2_FROM_SOURCE)
+    include(ConfigureSDL2)
+endif ()
+
 add_subdirectory(src)
 add_subdirectory(example)
 add_subdirectory(doc/examples)
