--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,9 +12,15 @@ if (EMSCRIPTEN)
     add_definitions(-DEMSCRIPTEN)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s USE_WEBGL2=1 -s USE_SDL=2")
 else ()
-    find_package(SDL2 REQUIRED)
-    string(STRIP ${SDL2_LIBRARIES} SDL2_LIBRARIES)
-    target_link_libraries(whycpp ${SDL2_LIBRARIES})
+    if (SDL2_FROM_SOURCE)
+        add_dependencies(whycpp SDL2-static SDL2main)
+        target_include_directories(whycpp SYSTEM PRIVATE ${SDL2_HEADERS})
+        target_link_libraries(whycpp SDL2main SDL2-static)
+    else ()
+        find_package(SDL2 REQUIRED)
+        string(STRIP ${SDL2_LIBRARIES} SDL2_LIBRARIES)
+        target_link_libraries(whycpp ${SDL2_LIBRARIES})
+    endif ()
 endif ()
 
 set(OUTPUT_DIR ${CMAKE_BINARY_DIR}/why_cpp)
