add SDL2_FROM_SOURCE definition check

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,9 @@ file(GLOB_RECURSE HEADERS ${PROJECT_HEADERS_DIR}/*.h)
 file(GLOB_RECURSE SOURCES ${PROJECT_SOURCES_DIR}/*.cpp)
 file(GLOB_RECURSE TEST_SOURCES ${TEST_SOURCES_DIR}/*.cpp)
 
-set(SDL2_FROM_SOURCE ON) # if you have libsdl2 installed use OFF instead
+if (NOT DEFINED SDL_POWER)
+    set(SDL2_FROM_SOURCE ON) # if you have libsdl2 installed use OFF instead
+endif()
 
 if (SDL2_FROM_SOURCE)
     include(ConfigureSDL2)
