--- a/lib/lodepng/CMakeLists.txt
+++ b/lib/lodepng/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.6)
 project(lodepng CXX)
 
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -Wextra -Wzero-as-null-pointer-constant -Winit-self -Wswitch-default -Wfloat-equal -Wdangling-else -Wunused-parameter")
+
 set(CMAKE_CXX_STANDARD 11)
 
 include_directories(include)
