--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,12 @@
 project(whycpp CXX)
 
+if(MSVC)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /WX ")
+else()
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -Wextra -Wzero-as-null-pointer-constant -Winit-self -Wswitch-default -Wfloat-equal -Wdangling-else -Wunused-parameter -Wsign-conversion -Wold-style-cast")
+#    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Weverything")
+endif()
+
 include_directories(${PROJECT_INCLUDES_DIR})
 
 add_library(whycpp SHARED STATIC ${SOURCES} ${HEADERS} ${INCLUDES})
