extract game loop and add emscripten, but still has bug with sdl2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,12 +17,12 @@ file(GLOB_RECURSE HEADERS ${PROJECT_HEADERS_DIR}/*.h)
 file(GLOB_RECURSE SOURCES ${PROJECT_SOURCES_DIR}/*.cpp)
 file(GLOB_RECURSE TEST_SOURCES ${TEST_SOURCES_DIR}/*.cpp)
 
-if (NOT DEFINED SDL2_FROM_SOURCE)
+if (NOT DEFINED SDL2_FROM_SOURCE AND NOT EMSCRIPTEN)
     message(STATUS "By default SDL2_FROM_SOURCE=ON")
     set(SDL2_FROM_SOURCE ON) # if you have libsdl2 installed use OFF instead
 endif()
 
-if (SDL2_FROM_SOURCE)
+if (SDL2_FROM_SOURCE AND NOT EMSCRIPTEN)
     include(ConfigureSDL2)
 endif ()
 
