--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -1,5 +1,7 @@
 project(example CXX)
 
+set(CMAKE_CXX_STANDARD 14)
+
 include_directories(${PROJECT_INCLUDES_DIR})
 
 if (EMSCRIPTEN)
@@ -7,8 +9,10 @@ if (EMSCRIPTEN)
     add_definitions(-DUSE_WASM)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --bind --memory-init-file 0 -s TOTAL_MEMORY=64*1024*1024 -s SAFE_HEAP=1")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s USE_WEBGL2=1 -s USE_SDL=2")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s WASM=1 -s GL_DEBUG=1 -s GL_ASSERTIONS=1 -s TRACE_WEBGL_CALLS=0")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s WASM=1")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 --use-preload-plugins")
     set(CMAKE_EXECUTABLE_SUFFIX ".html")
+    file(COPY html/index.html DESTINATION ${CMAKE_BINARY_DIR}/example)
 endif()
 
 add_executable(example main.cpp)
