--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.6)
 project(whycpp CXX)
 
 math(EXPR BITNESS "8*${CMAKE_SIZEOF_VOID_P}")
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 14)
 
 set(CMAKE_DIR "${PROJECT_SOURCE_DIR}/CMake")
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_DIR})
@@ -17,12 +17,12 @@ file(GLOB_RECURSE HEADERS ${PROJECT_HEADERS_DIR}/*.h)
 file(GLOB_RECURSE SOURCES ${PROJECT_SOURCES_DIR}/*.cpp)
 file(GLOB_RECURSE TEST_SOURCES ${TEST_SOURCES_DIR}/*.cpp)
 
-if (NOT DEFINED SDL2_FROM_SOURCE)
+if (NOT DEFINED SDL2_FROM_SOURCE AND NOT EMSCRIPTEN)
     message(STATUS "By default SDL2_FROM_SOURCE=ON")
     set(SDL2_FROM_SOURCE ON) # if you have libsdl2 installed use OFF instead
 endif()
 
-if (SDL2_FROM_SOURCE)
+if (SDL2_FROM_SOURCE AND NOT EMSCRIPTEN)
     include(ConfigureSDL2)
 endif ()
 
