--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -2,7 +2,7 @@ project(example CXX)
 
 set(CMAKE_CXX_STANDARD 14)
 
-include_directories(${PROJECT_INCLUDES_DIR})
+include_directories(${WHYCPP_INCLUDES_DIR})
 
 if (EMSCRIPTEN)
     add_definitions(-DEMSCRIPTEN)
