--- a/whycpp/src/CMakeLists.txt
+++ b/whycpp/src/CMakeLists.txt
@@ -1,12 +1,12 @@
 project(whycpp CXX)
 
-if(MSVC)
+if (MSVC)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /WX ")
-else()
+else ()
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -Wextra -Wzero-as-null-pointer-constant -Winit-self -Wswitch-default -Wfloat-equal -Wdangling-else -Wunused-parameter -Wsign-conversion -Wold-style-cast")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2")
-#    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Weverything")
-endif()
+    #    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Weverything")
+endif ()
 
 include_directories(${WHYCPP_INCLUDES_DIR})
 
@@ -30,6 +30,8 @@ else ()
     else ()
         find_package(SDL2 REQUIRED)
         string(STRIP ${SDL2_LIBRARIES} SDL2_LIBRARIES)
+        target_include_directories(whycpp SYSTEM PRIVATE ${SDL2_INCLUDE_DIRS})
+        message(STATUS "${SDL2_INCLUDE_DIRS}")
         target_link_libraries(whycpp ${SDL2_LIBRARIES})
     endif ()
 endif ()
