Fix whycpp_c project.
Convert project type from C to CXX;
Remove unneccessary whycpp includes from the whycpp_c project.

--- a/whycpp_c/src/CMakeLists.txt
+++ b/whycpp_c/src/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.6)
-project(whycpp_c C)
+project(whycpp_c CXX)
 
 if(MSVC)
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /WX ")
@@ -13,5 +13,5 @@ include_directories(${WHYCPP_INCLUDES_DIR})
 
 message(WHYCPP_INCLUDES_DIR: ${WHYCPP_INCLUDES_DIR})
 
-add_library(whycpp_c SHARED STATIC ${WHYCPP_C_SOURCES} ${WHYCPP_C_HEADERS} ${WHYCPP_C_INCLUDES} ${WHYCPP_HEADERS} ${WHYCPP_INCLUDES})
+add_library(whycpp_c SHARED STATIC ${WHYCPP_C_SOURCES} ${WHYCPP_C_HEADERS} ${WHYCPP_C_INCLUDES})
 target_link_libraries(whycpp_c whycpp)
