allow to run python script from the current dir

--- a/whycpp_python/CMakeLists.txt
+++ b/whycpp_python/CMakeLists.txt
@@ -10,3 +10,5 @@ file(GLOB_RECURSE WHYCPP_PYTHON_HEADERS ${WHYCPP_PYTHON_SOURCES_DIR}/*.h)
 file(GLOB_RECURSE WHYCPP_PYTHON_SOURCES ${WHYCPP_PYTHON_SOURCES_DIR}/*.c)
 
 add_subdirectory(src)
+
+file(COPY example/main.py DESTINATION ${CMAKE_BINARY_DIR}/whycpp_python/src)
