--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ set(WHYCPP_C_INCLUDES_DIR ${PROJECT_SOURCE_DIR}/whycpp_c/include)
 add_subdirectory(whycpp)
 add_subdirectory(whycpp_c)
 add_subdirectory(whycpp_python)
+add_subdirectory(whycpp_js)
 add_subdirectory(example)
 add_subdirectory(example_c)
 add_subdirectory(doc/examples)
