--- a/whycpp/src/CMakeLists.txt
+++ b/whycpp/src/CMakeLists.txt
@@ -3,7 +3,7 @@ project(whycpp CXX)
 if (MSVC)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /WX ")
 else ()
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -Wextra -Wzero-as-null-pointer-constant -Winit-self -Wswitch-default -Wfloat-equal -Wdangling-else -Wunused-parameter -Wsign-conversion -Wold-style-cast")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -Wextra -Wzero-as-null-pointer-constant -Winit-self -Wfloat-equal -Wdangling-else -Wunused-parameter -Wsign-conversion -Wold-style-cast")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2")
     #    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Weverything")
 endif ()
@@ -25,15 +25,12 @@ if (EMSCRIPTEN)
 else ()
     if (SDL2_FROM_SOURCE)
         add_dependencies(whycpp SDL2-static SDL2main)
-        target_include_directories(whycpp SYSTEM PRIVATE ${SDL2_HEADERS})
-        target_link_libraries(whycpp SDL2main SDL2-static)
     else ()
         find_package(SDL2 REQUIRED)
         string(STRIP ${SDL2_LIBRARIES} SDL2_LIBRARIES)
-        target_include_directories(whycpp SYSTEM PRIVATE ${SDL2_INCLUDE_DIRS})
-        message(STATUS "${SDL2_INCLUDE_DIRS}")
-        target_link_libraries(whycpp ${SDL2_LIBRARIES})
     endif ()
+    target_include_directories(whycpp SYSTEM PRIVATE ${SDL2_INCLUDE_DIRS})
+    target_link_libraries(whycpp ${SDL2_LIBRARIES})
 endif ()
 
 set(OUTPUT_DIR ${CMAKE_BINARY_DIR}/why_cpp)
