--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ jobs:
           - os: linux
       script: make reload compile
     - stage: documentation
+      language: bash
       branches:
         only:
           - master
