--- a/whycpp/lib/lodepng/CMakeLists.txt
+++ b/whycpp/lib/lodepng/CMakeLists.txt
@@ -4,7 +4,7 @@ project(lodepng CXX)
 if (MSVC)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /WX ")
 else ()
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -Wextra -Wzero-as-null-pointer-constant -Winit-self -Wswitch-default -Wfloat-equal -Wdangling-else -Wunused-parameter")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -Wextra -Wzero-as-null-pointer-constant -Winit-self -Wfloat-equal -Wunused-parameter")
 endif ()
 
 set(CMAKE_CXX_STANDARD 11)
