--- a/whycpp/src/CMakeLists.txt
+++ b/whycpp/src/CMakeLists.txt
@@ -3,7 +3,7 @@ project(whycpp CXX)
 if (MSVC)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /WX ")
 else ()
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -Wextra -Wzero-as-null-pointer-constant -Winit-self -Wfloat-equal -Wdangling-else -Wunused-parameter -Wsign-conversion -Wold-style-cast")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -Wextra -Wzero-as-null-pointer-constant -Winit-self -Wfloat-equal -Wunused-parameter -Wsign-conversion -Wold-style-cast")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2")
     #    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Weverything")
 endif ()
