--- a/whycpp_c/src/CMakeLists.txt
+++ b/whycpp_c/src/CMakeLists.txt
@@ -4,7 +4,7 @@ project(whycpp_c CXX)
 if(MSVC)
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /WX ")
 else()
-    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Werror -Wextra -Wzero-as-null-pointer-constant -Winit-self -Wswitch-default -Wfloat-equal -Wdangling-else -Wunused-parameter -Wsign-conversion")
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Werror -Wextra -Wzero-as-null-pointer-constant -Winit-self -Wfloat-equal -Wunused-parameter -Wsign-conversion")
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O2")
 endif()
 
