--- a/whycpp/src/CMakeLists.txt
+++ b/whycpp/src/CMakeLists.txt
@@ -25,12 +25,20 @@ if (EMSCRIPTEN)
 else ()
     if (SDL2_FROM_SOURCE)
         add_dependencies(whycpp SDL2-static SDL2main)
+        # TODO: compile sdl2_mixer from sources
     else ()
         find_package(SDL2 REQUIRED)
+        find_package(SDL2_mixer)
         string(STRIP ${SDL2_LIBRARIES} SDL2_LIBRARIES)
     endif ()
     target_include_directories(whycpp SYSTEM PRIVATE ${SDL2_INCLUDE_DIRS})
     target_link_libraries(whycpp ${SDL2_LIBRARIES})
+
+    if (SDL2_MIXER_FOUND)
+        message(STATUS "Use compiled SDL2_MIXER")
+        target_include_directories(whycpp SYSTEM PRIVATE ${SDL2_MIXER_INCLUDE_DIRS})
+        target_link_libraries(${PROJECT_NAME} ${SDL2_MIXER_LIBRARIES})
+    endif ()
 endif ()
 
 set(OUTPUT_DIR ${CMAKE_BINARY_DIR}/why_cpp)
