--- a/whycpp/src/CMakeLists.txt
+++ b/whycpp/src/CMakeLists.txt
@@ -4,13 +4,17 @@ if (MSVC)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /WX ")
 else ()
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -Wextra -Wzero-as-null-pointer-constant -Winit-self -Wfloat-equal -Wunused-parameter -Wsign-conversion -Wold-style-cast")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2")
+#    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2")
     #    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Weverything")
 endif ()
 
 include_directories(${WHYCPP_INCLUDES_DIR})
 
-add_library(whycpp SHARED STATIC ${WHYCPP_SOURCES} ${WHYCPP_HEADERS} ${WHYCPP_INCLUDES})
+if (EMSCRIPTEN)
+    add_library(whycpp STATIC ${WHYCPP_SOURCES} ${WHYCPP_HEADERS} ${WHYCPP_INCLUDES})
+else ()
+    add_library(whycpp SHARED STATIC ${WHYCPP_SOURCES} ${WHYCPP_HEADERS} ${WHYCPP_INCLUDES})
+endif ()
 
 target_include_directories(whycpp SYSTEM PRIVATE ${LODEPNG_HEADERS})
 target_link_libraries(whycpp lodepng)
@@ -21,7 +25,7 @@ endif ()
 
 if (EMSCRIPTEN)
     add_definitions(-DEMSCRIPTEN)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s USE_WEBGL2=1 -s USE_SDL=2")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s USE_WEBGL2=1 -s USE_SDL=2 -s USE_SDL_MIXER=2")
 else ()
     if (SDL2_FROM_SOURCE)
         add_dependencies(whycpp SDL2-static SDL2main)
