--- a/whycpp_js/src/CMakeLists.txt
+++ b/whycpp_js/src/CMakeLists.txt
@@ -8,7 +8,7 @@ if (EMSCRIPTEN)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s USE_WEBGL2=1 -s USE_SDL=2 -s FORCE_FILESYSTEM=1")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s WASM=1")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s ASSERTIONS=1")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0 --use-preload-plugins")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --use-preload-plugins")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --embed-file example@/")
     set(CMAKE_EXECUTABLE_SUFFIX ".js")
 endif()
