--- a/whycpp/src/CMakeLists.txt
+++ b/whycpp/src/CMakeLists.txt
@@ -3,7 +3,7 @@ project(whycpp CXX)
 if (MSVC)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /WX ")
 else ()
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -Wextra -Wzero-as-null-pointer-constant -Winit-self -Wfloat-equal -Wunused-parameter -Wsign-conversion -Wold-style-cast")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -Wextra -Wzero-as-null-pointer-constant -Winit-self -Wfloat-equal -Wno-unused-private-field -Wunused-parameter -Wsign-conversion -Wold-style-cast")
 #    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2")
     #    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Weverything")
 endif ()
@@ -25,6 +25,7 @@ endif ()
 
 if (EMSCRIPTEN)
     add_definitions(-DEMSCRIPTEN)
+    add_definitions(-DSDL_MIXER)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s USE_WEBGL2=1 -s USE_SDL=2 -s USE_SDL_MIXER=2")
 else ()
     if (SDL2_FROM_SOURCE)
@@ -40,6 +41,7 @@ else ()
 
     if (SDL2_MIXER_FOUND)
         message(STATUS "Use compiled SDL2_MIXER")
+        add_definitions(-DSDL_MIXER)
         target_include_directories(whycpp SYSTEM PRIVATE ${SDL2_MIXER_INCLUDE_DIRS})
         target_link_libraries(${PROJECT_NAME} ${SDL2_MIXER_LIBRARIES})
     endif ()
