split example_js and whycpp_js - extract main file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ project(whycpp-root)
 
 set(WHYCPP_INCLUDES_DIR ${PROJECT_SOURCE_DIR}/whycpp/include)
 set(WHYCPP_C_INCLUDES_DIR ${PROJECT_SOURCE_DIR}/whycpp_c/include)
+set(WHYCPP_JS_INCLUDES_DIR ${PROJECT_SOURCE_DIR}/whycpp_js/include)
 
 add_subdirectory(whycpp)
 add_subdirectory(whycpp_c)
@@ -11,4 +12,5 @@ add_subdirectory(whycpp_python)
 add_subdirectory(whycpp_js)
 add_subdirectory(example)
 add_subdirectory(example_c)
+add_subdirectory(example_js)
 add_subdirectory(doc/examples)
