use ${PROJECT_NAME} instead of magic name

--- a/example_js/CMakeLists.txt
+++ b/example_js/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.6)
-project(js_example CXX)
+project(example_js CXX)
 set(CMAKE_CXX_STANDARD 17)
 
 include_directories(${WHYCPP_JS_INCLUDES_DIR})
@@ -16,13 +16,13 @@ if (EMSCRIPTEN)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --embed-file src@/")
     set(CMAKE_EXECUTABLE_SUFFIX ".js")
 
-    file(COPY index.html DESTINATION ${CMAKE_BINARY_DIR}/example_js)
-    file(COPY src DESTINATION ${CMAKE_BINARY_DIR}/example_js)
-    file(COPY assets DESTINATION ${CMAKE_BINARY_DIR}/example_js/src)
+    file(COPY index.html DESTINATION ${CMAKE_BINARY_DIR}/${PROJECT_NAME})
+    file(COPY src DESTINATION ${CMAKE_BINARY_DIR}/${PROJECT_NAME})
+    file(COPY assets DESTINATION ${CMAKE_BINARY_DIR}/${PROJECT_NAME}/src)
 else ()
-    file(COPY src/ DESTINATION ${CMAKE_BINARY_DIR}/example_js)
-    file(COPY assets DESTINATION ${CMAKE_BINARY_DIR}/example_js)
+    file(COPY src/ DESTINATION ${CMAKE_BINARY_DIR}/${PROJECT_NAME})
+    file(COPY assets DESTINATION ${CMAKE_BINARY_DIR}/${PROJECT_NAME})
 endif ()
 
-add_executable(example_js main.cpp)
-target_link_libraries(example_js whycpp_js)
+add_executable(${PROJECT_NAME} main.cpp)
+target_link_libraries(${PROJECT_NAME} whycpp_js)
