add ability to register custom js to c++ bindings

--- a/whycpp_js/src/CMakeLists.txt
+++ b/whycpp_js/src/CMakeLists.txt
@@ -5,10 +5,11 @@ include_directories(${WHYCPP_JS_INCLUDES_DIR})
 include_directories(${WHYCPP_INCLUDES_DIR})
 
 if (EMSCRIPTEN)
-    add_library(whycpp_js STATIC ${WHYCPP_JS_SOURCES} ${WHYCPP_JS_HEADERS} ${WHYCPP_JS_INCLUDES})
+    add_library(whycpp_js STATIC ${WHYCPP_JS_HEADERS} ${WHYCPP_JS_INCLUDES} ${WHYCPP_JS_SOURCES})
 else ()
-    add_library(whycpp_js SHARED STATIC ${WHYCPP_JS_SOURCES} ${WHYCPP_JS_HEADERS} ${WHYCPP_JS_INCLUDES})
+    message(STATUS "${WHYCPP_JS_HEADERS}")
+    add_library(whycpp_js SHARED STATIC ${WHYCPP_JS_HEADERS} ${WHYCPP_JS_INCLUDES} ${WHYCPP_JS_SOURCES})
 endif ()
 
 target_link_libraries(whycpp_js whycpp duktape duktape_modules)
-target_include_directories(whycpp_js PRIVATE SYSTEM ${DUKTAPE_INCLUDE_DIR} ${DUKTAPE_MODULES_INCLUDE_DIR})
+target_include_directories(whycpp_js PUBLIC SYSTEM ${DUKTAPE_INCLUDE_DIR} ${DUKTAPE_MODULES_INCLUDE_DIR})
