disable python and js by default

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,10 +7,19 @@ set(WHYCPP_C_INCLUDES_DIR ${PROJECT_SOURCE_DIR}/whycpp_c/include)
 set(WHYCPP_JS_INCLUDES_DIR ${PROJECT_SOURCE_DIR}/whycpp_js/include)
 
 add_subdirectory(whycpp)
-add_subdirectory(whycpp_c)
-add_subdirectory(whycpp_python)
-add_subdirectory(whycpp_js)
 add_subdirectory(example)
-add_subdirectory(example_c)
-add_subdirectory(example_js)
+if (USE_PYTHON)
+    add_subdirectory(whycpp_python)
+    if (NOT USE_C)
+        add_subdirectory(whycpp_c)
+    endif ()
+endif ()
+if (USE_JS)
+    add_subdirectory(whycpp_js)
+    add_subdirectory(example_js)
+endif ()
+if (USE_C)
+    add_subdirectory(example_c)
+    add_subdirectory(whycpp_c)
+endif ()
 add_subdirectory(doc/examples)
