fix sdl2 mixer build to support sdl2 from sources

--- a/whycpp/CMakeLists.txt
+++ b/whycpp/CMakeLists.txt
@@ -17,7 +17,7 @@ file(GLOB_RECURSE WHYCPP_SOURCES ${WHYCPP_SOURCES_DIR}/*.cpp)
 if (NOT DEFINED SDL2_FROM_SOURCE AND NOT EMSCRIPTEN)
     message(STATUS "By default SDL2_FROM_SOURCE=ON")
     set(SDL2_FROM_SOURCE ON) # if you have libsdl2 installed use OFF instead
-endif()
+endif ()
 
 if (SDL2_FROM_SOURCE AND NOT EMSCRIPTEN)
     include(ConfigureSDL2)
@@ -26,5 +26,7 @@ endif ()
 set(LODEPNG_HEADERS ${PROJECT_SOURCE_DIR}/lib/lodepng/include)
 set(SDL2MIXER_INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/lib/sdl2_mixer/include)
 add_subdirectory(lib/lodepng)
-add_subdirectory(lib/sdl2_mixer)
+if (NOT EMSCRIPTEN)
+    add_subdirectory(lib/sdl2_mixer)
+endif ()
 add_subdirectory(src)
