fix build for windows

--- a/whycpp/src/CMakeLists.txt
+++ b/whycpp/src/CMakeLists.txt
@@ -28,15 +28,12 @@ if (EMSCRIPTEN)
     add_definitions(-DSDL_MIXER)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s USE_WEBGL2=1 -s USE_SDL=2 -s USE_SDL_MIXER=2")
 else ()
-    find_package(SDL2 REQUIRED)
-    string(STRIP ${SDL2_LIBRARIES} SDL2_LIBRARIES)
+    INCLUDE(FindPkgConfig)
+    PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
+    PKG_SEARCH_MODULE(SDL2MIXER REQUIRED sdl2_mixer)
 
-    add_dependencies(whycpp SDL2-mixer)
-    target_include_directories(whycpp SYSTEM PRIVATE ${SDL2MIXER_INCLUDE_DIRS})
-    target_link_libraries(whycpp SDL2-mixer)
-
-    target_include_directories(whycpp SYSTEM PRIVATE ${SDL2_INCLUDE_DIRS})
-    target_link_libraries(whycpp ${SDL2_LIBRARIES})
+    target_include_directories(whycpp SYSTEM PRIVATE ${SDL2_INCLUDE_DIRS} ${SDL2MIXER_INCLUDE_DIRS})
+    target_link_libraries(whycpp ${SDL2_LIBRARIES} ${SDL2MIXER_LIBRARIES})
 endif ()
 
 set(OUTPUT_DIR ${CMAKE_BINARY_DIR}/why_cpp)
