use find_package instead of pkg_config

--- a/whycpp/src/CMakeLists.txt
+++ b/whycpp/src/CMakeLists.txt
@@ -28,12 +28,11 @@ if (EMSCRIPTEN)
     add_definitions(-DSDL_MIXER)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s USE_WEBGL2=1 -s USE_SDL=2 -s USE_SDL_MIXER=2")
 else ()
-    INCLUDE(FindPkgConfig)
-    PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
-    PKG_SEARCH_MODULE(SDL2MIXER REQUIRED sdl2_mixer)
+    find_package(SDL2 REQUIRED)
+    find_package(SDL2_mixer REQUIRED)
 
-    target_include_directories(whycpp SYSTEM PRIVATE ${SDL2_INCLUDE_DIRS} ${SDL2MIXER_INCLUDE_DIRS})
-    target_link_libraries(whycpp ${SDL2_LIBRARIES} ${SDL2MIXER_LIBRARIES})
+    target_include_directories(whycpp SYSTEM PRIVATE ${SDL2_INCLUDE_DIR} ${SDL2_MIXER_INCLUDE_DIRS})
+    target_link_libraries(whycpp ${SDL2_LIBRARY} ${SDL2_MIXER_LIBRARIES})
 endif ()
 
 set(OUTPUT_DIR ${CMAKE_BINARY_DIR}/why_cpp)
